Changes from jTDS 1.2.6
=======================

10/24/2012 - Holger Rehn
 o Added unit tests for bugs #473 and #635.

10/23/2012 - Holger Rehn
 o Implemented non-locking SharedSocket finalizer (bug #609).
 o Greatly improved virtual socket management performance if a large number of
   statements is opened for a single connection.

10/18/2012 - Holger Rehn
 o Added test for bug #632, year-check 1753-9999 not valid for type DATE.
 o Added test for bug #624, MS SQL Server 2008 full text search problem.
 o Removed shell scripts for building jTDS from the Windows/Linux console.
 o Extended build process to create and upload Maven artifacts to sonatype.org
   (bug #636, bug #668, feature request #49, feature request #70).

10/15/2012 - Holger Rehn
 o Fixed various JUnit tests causing warnings.

10/10/2012 - Holger Rehn
 o Fixed format conversion errors for DATETIME, DATE and TIME values.
 o Fixed bug #615, the SQL parser doesn't correctly handle function escapes
   containing nested (unescaped) functions.
 o Fixed bug #634, incorrect comment processing in callable statements.

10/09/2012 - Holger Rehn
 o Fixed parameter name format for procedure calls using named parameters.
 o Fixed unit tests that depend on date/time data types to be skipped if run
   against a server not supporting that types.

10/08/2012 - Holger Rehn
 o Fixed bug #647, preparing a statement including a WITH clause doesn't
   retrieve resultset meta data.

10/06/2012 - Holger Rehn
 o Added unit tests for bug #654 and the SQL parser bug reported in patch #115.

10/05/2012 - Holger Rehn
 o Implemented support for the COMPUTE (BY) operator (bug #678, patch #48) and
   added corresponding unit tests.

10/02/2012 - Holger Rehn
 o Improved performance by using StringBuilder instead of StringBuffer.
 o Corrected unit test for bug #507, the executing thread's interruption state
   hasn't been cleared, causing subsequent tests to fail.
 o Fixed bug #677, possible deadlock in JtdsStatement.close().
